--- a/ProyectoCine/catalogo/templates/index.html
+++ b/ProyectoCine/catalogo/templates/index.html
@@ -5,6 +5,11 @@
     <h1>Biblioteca de Peliculas Local Home</h1>
         <p>Bienvenido a <em>Biblioteca de Peliculas</em> un proyecto de web para el ejercicio final del curso de python</p>
     <h2>Contenido dinámico</h2>
-    <p>La biblioteca de peliculas tiene </p>
+    <p>La biblioteca de peliculas tiene un total de: </p>
+    <ul>
+        <li><strong>Peliculas:</strong> {{ num_peliculas }}</li>
+        <li><strong>Directores:</strong> {{ num_directores }}</li>
+        <li><strong>Cantidad de Generos:</strong> {{ num_generos }}</li>
+    </ul>
   
 {% endblock %}
