--- a/ProyectoCine/catalogo/templates/base.html
+++ b/ProyectoCine/catalogo/templates/base.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    {% block title %}<title>Catalogo de Peliculas</title> {% endblock %}
+    <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    {% block title %}<title>Document</title> {% endblock %}
+    <link rel="stylesheet" href="https://maxcnd.bootstrapcnd.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">    
     
 </head>
 <body>
     <div class="container-fluid">
-        <div class="col-sm-2">
-        {% block sidebar %}
-        <ul>
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li><a href=""></a>Todas las peliculas</li>
-            <li><a href=""></a>Todos los directores</li>
-        </ul>    
-        {% endblock %}    
-        </div>
-        <div class="col-sm-10">
-        {% block content %}{% endblock %}
+        <div class="row">
+            <div class="col-sm-2">
+                {% block sidebar %}
+                <ul class="sidebar-nav">
+                    <li><a href="{% url 'index' %}">Home</a></li>
+                    <li><a href=""></a>Todas las peliculas</li>
+                    <li><a href=""></a>Todos los directores</li>
+                </ul>    
+                {% endblock %}    
+            </div>   
+            <div class="col-sm-10">
+            {% block content %}{% endblock %}
+            </div>
         </div>
     </div>    
 </body>
